--- a/HTML/homework-1/hm-1.style.css
+++ b/HTML/homework-1/hm-1.style.css
@@ -1,9 +1,8 @@
 .spart{
-    width: 500px;
-    height: 500px;
-    background-color: blue;
+    width: 300px;
+    float: left;
 }
 .nap{
-    width: 33%;
-    margin-left: 10px;
+    width: 300px;
+    margin-left: 340px;
 }
